--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,24 @@
+body{
+    color: black;
+}
 img{
     max-width: 100%;
-    height: 200px;
-    border: black solid 1px;
+    height: 80%;
+    border: black solid 2px;
+    border-radius: 10px;
 }
 h1{
     text-align: center;
+    text-decoration: underline;
+}
+.reset_button{
+    display: flex;
+    justify-content: center;
+}
+.case{
+    max-width: 180px;
+    max-height: 180px;
+}
+.temps_max{
+    color: red;
 }
