--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 body{
     color: black;
+    font-style: normal;
+    font-weight: bold;
+    background-image: url('../images/fond.jpg');
+    background-size: cover(100vh - 60px);
 }
 img{
     max-width: 100%;
@@ -14,6 +18,7 @@ h1{
 .reset_button{
     display: flex;
     justify-content: center;
+    margin-bottom: 10px;
 }
 .case{
     max-width: 180px;
@@ -21,4 +26,15 @@ h1{
 }
 .temps_max{
     color: red;
+}
+p{
+    font-size: 18px;
+    color: black;
+    font-weight: bolder;
+}
+span{
+    font-size: 18px;
+    color: black;
+    font-weight: bolder;
+    margin-bottom: 15px;
 }
